# TerseLambda

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Readme.md  conanfile.py  library.json5  package.json5
.github/workflows/: ci.yml
cmake/: is_root.cmake  tlConfig.cmake.in
docs/: api.md  package-management.md
examples/cmake-fetchcontent/: CMakeLists.txt  Readme.md
examples/cmake-findpackage/: CMakeLists.txt  Readme.md
examples/dds/: Readme.md  library.json5  package.json5
examples/dds/src/: example.main.cpp
include/tl/: tl.hpp
presentations/: history.html
tests/: CMakeLists.txt  gcc-reproducer.test.cpp  tl.test.cpp
tools/: gcc-10.tc.json5  release.py
